--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ h1 {
     
 }
 
+#current-score {
+    font-size: 32px;
+}
+
 .game {
     display: flex;
     flex-direction: column;
@@ -38,6 +42,7 @@ h1 {
 
 
 ul {
+    margin: 30px 0;
     padding: 0;
     list-style-type: none;
     display: flex;
@@ -45,19 +50,36 @@ ul {
 }
 
 .selections li{
-   border: 2px solid black;
-   border-radius: 100px;
+   border: 1px solid black;
+   box-shadow: 10px 10px  lightblue;
+   border-radius: 50px;
    padding: 22px;
    width: 120px;
    height: 120px;
    cursor: pointer;
+   
 }
 
 img {
     width: 120px;
+   
 }
 
 
 #btn {
     display: none;
+    padding: 10px 80px;
+    border-color: lightblue;
+    border-radius: 12px;
+    background-color: #F6FFD0;
+}
+
+#btn:hover {
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.selections li:hover {
+    border: 1px solid lightblue;
+    
 }
